--- a/html/htdocs/css/roadmap.css
+++ b/html/htdocs/css/roadmap.css
@@ -12,7 +12,7 @@ table.progress a, table.progress :link, table.progress :visited,
 table.progress :link:hover, table.progress :visited:hover {
  border: none;
  display: block;
- width: 100%;
+ width: 80%;
  height: 1.2em;
  padding: 0;
  margin: 0;
@@ -21,14 +21,14 @@ table.progress :link:hover, table.progress :visited:hover {
 table.progress td { background: #fff; padding: 0 }
 table.progress td.closed { background: #bae0ba }
 table.progress td :hover { background: none }
-p.percent { font-size: 10px; line-height: 2.4em; margin: 0.9em 0 0 }
+p.percent { font-size: 10px; line-height: 2.4em; margin: 0.9em 0 0; }
 
 /* Styles for the roadmap view */
 ul.milestones { margin: 2em 0 0; padding: 0 }
 li.milestone { list-style: none; margin-bottom: 4em }
 .milestone .info { white-space: nowrap }
 .milestone .info h2 {
- background: #f7f7f7;
+ background:transparent;
  border-bottom: 1px solid #d7d7d7;
  margin: 0;
 }
@@ -40,7 +40,7 @@ li.milestone { list-style: none; margin-bottom: 4em }
 .milestone .info h2 :link:hover, .milestone .info h2 :visited:hover {
  color: #000;
 }
-.milestone .info h2 em { color: #b00; font-style: normal }
+.milestone .info h2 em { color: #005080; font-style: normal }
 .milestone .info .date {
  color: #888;
  font-size: 11px;
@@ -49,6 +49,7 @@ li.milestone { list-style: none; margin-bottom: 4em }
 }
 .milestone .info .progress { margin: 1em 1em 0; width: 40em; max-width: 70% }
 .milestone .info dl {
+ clear:left;
  font-size: 10px;
  font-style: italic;
  margin: 0 1em 2em;
