and there the story ends :( runkit doesn't work here, seams to be a problem in conjunction with gtk? further tests necessary
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/branches/transition@987 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/MetaPHP/Glade/MetaPHP.glade
+++ b/MetaPHP/Glade/MetaPHP.glade
@@ -70,8 +70,8 @@
                     <child>
                       <widget class="GtkButton" id="button2">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">button</property>
-                        <signal name="clicked" handler="clickBtn1"/>
+                        <property name="label" translatable="yes">Set Code</property>
+                        <signal name="clicked" handler="setMethodCode"/>
                       </widget>
                       <packing>
                         <property name="position">2</property>
