after several tries to get a working php with gtk and runkit, no success so far there seams to be an issue in conjunction with the Gtk main loop
added code to illustrate the problem

git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/branches/transition@989 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/MetaPHP/Glade/MetaPHP.glade
+++ b/MetaPHP/Glade/MetaPHP.glade
@@ -65,7 +65,14 @@
                       <placeholder/>
                     </child>
                     <child>
-                      <placeholder/>
+                      <widget class="GtkButton" id="button3">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">execute code</property>
+                        <signal name="clicked" handler="execCode"/>
+                      </widget>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
                     </child>
                     <child>
                       <widget class="GtkButton" id="button2">
