now we have additionaly a snippet loader :) nice for presentation
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/branches/transition@1001 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/MetaPHP/Glade/MetaPHP.glade
+++ b/MetaPHP/Glade/MetaPHP.glade
@@ -122,7 +122,7 @@
             <property name="tab_fill">False</property>
           </packing>
         </child>
-        <child>
+        <!-- <child>
           <widget class="GtkVPaned" id="vpaned2">
             <property name="visible">True</property>
             <child>
@@ -184,7 +184,7 @@
             <property name="tab_expand">False</property>
             <property name="tab_fill">False</property>
           </packing>
-        </child>
+        </child> -->
       </widget>
     </child>
   </widget>
